--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./src/assets/favicon.png" />
-    <title>Vite + React + TS</title>
+    <title>Countries App</title>
   </head>
   <body class="light-theme">
     <div id="root"></div>
